# diploma

./: .env_template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  demo_data.json  docker-compose.yml  pyproject.toml
articles/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
articles/migrations/: 0001_initial.py
nginx/: nginx.conf
settings/: config.py  settings.py  urls.py  views.py
static/css/: style.css
templates/: 403.html  404.html  base.html  index.html  navbar.html  pagination.html
templates/articles/: add_article.html  add_article_done.html  article.html  articles_list.html
templates/registration/: logged_out.html  login.html  register.html  register_done.html
templates/users/: dashboard.html  users_list.html
users/: admin.py  decorators.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
